Fix small images and pixel art in Overview docker

Before this commit, pxel art would be displayed
in Overview docker in an unconvenient size.
This commit fixes this behaviour by making sure
pixel art images are scaled up properly.

Note: "pixel art" here describes any image for which
the Overview docker pixels count is bigger than the image
itself (so the image needs to be scaled up).

Fixes include:
- fix in OverviewThumbnailStrokeStrategy to not
scale down if the image wasn't oversampled or scaled up before.
(which was the actual problem)
- change in OTSStrategy to use Bilinear for normal images and NN for
pixel art
- change in Overview docker to clean up usages of different size
calculations

BUG:408143